[gd_scene load_steps=22 format=3 uid="uid://bekplfmatwh7t"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_fy7cp"]
[ext_resource type="PackedScene" uid="uid://c2cpquwo12c8c" path="res://helper_scenes/weather.tscn" id="2_dh2u6"]
[ext_resource type="MeshLibrary" uid="uid://dueo3p7wb7mte" path="res://resources/cityscape.tres" id="2_h0g0u"]
[ext_resource type="Texture2D" uid="uid://dwjtx0urr5kub" path="res://assets/textures/concrete/concrete_col.png" id="3_3tdok"]
[ext_resource type="PackedScene" uid="uid://cd0ihn1hy3iy0" path="res://assets/models/roof.glb" id="6_qre76"]
[ext_resource type="PackedScene" uid="uid://dkaobxh68jldu" path="res://entities/money/money.tscn" id="7_xmptw"]
[ext_resource type="PackedScene" uid="uid://dhsnjfdlsi6f6" path="res://entities/elevator_door/left_door.tscn" id="8_8qeqs"]
[ext_resource type="PackedScene" uid="uid://cmbotrmcef87r" path="res://entities/player/big_player.tscn" id="8_j72tx"]
[ext_resource type="PackedScene" uid="uid://c844vvs6nvt3i" path="res://entities/roof_stuff/fence.tscn" id="9_1erj4"]
[ext_resource type="PackedScene" uid="uid://bj852etjbtg3i" path="res://entities/elevator_door/right_door.tscn" id="9_as8rx"]
[ext_resource type="PackedScene" uid="uid://da13xgssnk2nh" path="res://entities/roof_stuff/roof_antenna.tscn" id="10_pc0gx"]
[ext_resource type="Script" path="res://scripts/lighting_detector.gd" id="11_hw3r0"]
[ext_resource type="AudioStream" uid="uid://cdi5qr0r1jyw5" path="res://assets/sounds/sfx/electricity-lightning-thunder-close-single-01.mp3" id="13_4g87c"]
[ext_resource type="AudioStream" uid="uid://1oro43wn2nlm" path="res://assets/sounds/sfx/magic-lightning-spark-01.mp3" id="14_6iqdt"]
[ext_resource type="AudioStream" uid="uid://br78orq1yviql" path="res://assets/sounds/sfx/wind_rush.mp3" id="15_nwmrb"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hwq6u"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ui735"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6io7j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mxp00"]
albedo_texture = ExtResource("3_3tdok")
normal_texture = SubResource("CompressedTexture2D_6io7j")
ao_enabled = true
ao_texture = SubResource("CompressedTexture2D_hwq6u")
heightmap_scale = 1.0
heightmap_texture = SubResource("CompressedTexture2D_ui735")
uv1_triplanar = true
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_e3gg2"]
material = SubResource("StandardMaterial3D_mxp00")
size = Vector2(300, 300)

[sub_resource type="BoxShape3D" id="BoxShape3D_m5bxw"]
size = Vector3(2, 1, 2)

[node name="Level" type="Node3D"]
script = ExtResource("1_fy7cp")
floor_title = "Roof"
next_floor = "level5_down"

[node name="Weather" parent="." instance=ExtResource("2_dh2u6")]

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -1, 0)
mesh_library = ExtResource("2_h0g0u")
cell_center_y = false
data = {
"cells": PackedInt32Array(0, 1, 0, 65535, 1, 26, 65535, 65534, 27, 0, 65534, 24, 2, 1, 23, 65534, 0, 1441822, 65533, 65534, 1048607, 65534, 65535, 1048596, 65534, 65534, 1048602, 65530, 2, 1048602, 65530, 65533, 1048602, 65533, 65531, 1048602, 2, 65530, 1048602, 4, 65533, 1048602, 1, 5, 1048602, 65531, 6, 1048602, 6, 4, 26, 0, 65529, 26, 65531, 65529, 1441818, 65531, 65531, 1441816, 1, 65531, 655384, 65532, 3, 1048600, 65535, 6, 1048598, 6, 65535, 22, 65535, 65531, 21, 65530, 65535, 1441813, 65533, 2, 655381, 2, 65535, 1048597, 1, 65533, 1048597, 0, 65532, 1048598, 1, 65535, 1048582, 0, 2, 1441798, 1, 0, 1441797, 65533, 65535, 5, 65534, 1, 1441792, 65535, 65533, 1441793, 2, 65534, 1441794, 65533, 0, 1441795, 1, 2, 1441795, 3, 0, 655363, 2, 0, 1048580, 65533, 1, 5, 65534, 65533, 5, 1, 1, 2, 0, 65533, 0, 1, 65534, 8, 2, 65533, 6, 3, 65535, 1048582, 65532, 1, 655366, 65532, 65534, 1441798, 65533, 65533, 655366, 65535, 2, 1048581, 65534, 2, 5, 65532, 2, 5, 65532, 0, 655365, 65532, 65535, 655368, 65531, 65535, 1048581, 65531, 0, 1048581, 2, 3, 1048599, 4, 1, 23, 4, 65535, 1441815, 3, 65532, 1441815, 65535, 65532, 655383, 65531, 65532, 1048599, 65534, 65530, 1048599, 65535, 65530, 23, 65533, 4, 23, 65534, 5, 1441815, 0, 4, 655383, 3, 5, 655382, 6, 3, 655382, 7, 1, 655382, 7, 65533, 655382, 5, 65531, 655382, 3, 65529, 655382, 5, 65533, 655384, 5, 1, 655385, 6, 65534, 655385, 65534, 65532, 655385, 65534, 3, 655385, 3, 3, 655385, 3, 65530, 655385, 65531, 65533, 655385, 65531, 4, 655385, 3, 2, 655385, 2, 2, 655386, 3, 1, 655383, 65534, 4, 655386, 1, 4, 1048602, 4, 2, 26, 4, 65534, 1441818, 2, 65532, 1441818, 1, 3, 655387, 65535, 4, 655387, 4, 5, 655387, 5, 65535, 1048603, 5, 65532, 27, 3, 65531, 1441819, 1, 65530, 1441819, 6, 2, 1441823, 6, 0, 655391, 4, 65531, 31, 65533, 65530, 31, 65530, 1, 1048607, 65530, 3, 655381, 65535, 5, 1441824, 65533, 3, 655392, 65535, 3, 655392, 1, 65532, 655360, 0, 65530, 655360, 6, 65533, 1048576, 5, 4, 1048576, 2, 5, 0, 0, 6, 0, 65532, 5, 1441792, 65532, 4, 1441796, 65531, 2, 655364, 65531, 65534, 655364, 65533, 65532, 655364, 65534, 65531, 655364, 4, 65532, 655364, 6, 65531, 1441798, 4, 65529, 6, 65533, 65529, 6, 5, 5, 7, 5, 3, 7, 5, 2, 7, 5, 65534, 7, 2, 65531, 3, 0, 65531, 7, 65532, 65532, 7, 65533, 5, 1441806, 0, 5, 7, 1, 6, 7, 4, 6, 0, 3, 6, 9, 2, 6, 3, 4, 4, 12, 3, 4, 13, 2, 4, 14, 5, 0, 15, 3, 65533, 18, 3, 65534, 19, 65530, 65534, 21, 65530, 0, 21, 65534, 6, 1441813, 65532, 65530, 655381, 65530, 65532, 655381, 65535, 65529, 655377, 65535, 65528, 655386, 0, 65528, 655387, 1, 65528, 655360, 65534, 65528, 655381, 2, 65529, 1048597, 1, 65529, 1048598, 65534, 65529, 1048595, 65532, 65529, 1048595, 65529, 65535, 1048608, 65528, 65535, 1048608, 65528, 0, 8, 65529, 0, 1048576, 65528, 65534, 1048576, 65528, 1, 1048602, 65529, 1, 1441813, 65529, 2, 1048608, 65529, 3, 1048608, 65529, 4, 1048576, 65529, 65534, 1048608, 65529, 65533, 1048576, 65529, 65532, 1048608, 65529, 65531, 1441800, 65530, 65530, 1048576, 65530, 5, 8, 65532, 6, 1048608, 65533, 6, 1048597, 65534, 7, 1048608, 65535, 7, 1048597, 0, 7, 1048608, 1, 7, 0, 7, 0, 1048608, 7, 65535, 1441792, 7, 65534, 1048608, 6, 65532, 1048608, 5, 65530, 1048608, 65531, 3, 1048576, 65531, 5, 1048579, 65530, 4, 3, 4, 3, 3, 4, 0, 3, 4, 65530, 3, 65531, 65530, 1048602, 65532, 65531, 1441800, 6, 1, 1048602, 65530, 65531, 1048602)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="GridMap"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("PlaneMesh_e3gg2")
skeleton = NodePath("../..")

[node name="OfficeFloor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)

[node name="roof" parent="OfficeFloor" instance=ExtResource("6_qre76")]

[node name="Money" parent="OfficeFloor" instance=ExtResource("7_xmptw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0202515, 4.00313, 0.233727)

[node name="Fence" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.6278, 4, -4.73454)

[node name="Fence2" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.6278, 4, -8.17119)

[node name="Fence18" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.05134, 4, 7.03503)

[node name="Fence19" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.05134, 4, 4.50362)

[node name="Fence3" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.05415, 4, -9.74064)

[node name="Fence4" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.60405, 4, -9.74064)

[node name="Fence5" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.848097, 4, -9.74064)

[node name="Fence14" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -2.87035, 4, 8.60804)

[node name="Fence15" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.57975, 4, 8.60804)

[node name="Fence16" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 4.0319, 4, 8.60804)

[node name="Fence17" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 7.47779, 4, 8.60804)

[node name="Fence6" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.29146, 4, -9.74064)

[node name="Fence7" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.74156, 4, -9.74064)

[node name="Fence8" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.30908, 4, -8.17113)

[node name="Fence9" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.30908, 4, -4.72428)

[node name="Fence10" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.30908, 4, -1.28892)

[node name="Fence11" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.30908, 4, 2.15793)

[node name="Fence12" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -8.13974, 4, 4.99249)

[node name="Fence13" parent="OfficeFloor" instance=ExtResource("9_1erj4")]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -5.70245, 4, 7.42978)

[node name="roof_antenna" parent="OfficeFloor" instance=ExtResource("10_pc0gx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.05345, 3.99999, 6.69558)

[node name="roof_antenna2" parent="OfficeFloor" instance=ExtResource("10_pc0gx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.19827, 3.99999, 8.83065)

[node name="LeftDoor" parent="OfficeFloor" instance=ExtResource("8_8qeqs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.17, 5.46324, 1.766)

[node name="RightDoor" parent="OfficeFloor" instance=ExtResource("9_as8rx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.17, 5.463, -1.766)
end_door = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Label"

[node name="BigPlayer" parent="." instance=ExtResource("8_j72tx")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8.86123, 29, 1.66885)

[node name="LightingDetector" type="Area3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 29.5303, 0)
script = ExtResource("11_hw3r0")
player = NodePath("../BigPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LightingDetector"]
shape = SubResource("BoxShape3D_m5bxw")

[node name="Sfx1" type="AudioStreamPlayer3D" parent="LightingDetector"]
stream = ExtResource("13_4g87c")

[node name="Sfx2" type="AudioStreamPlayer3D" parent="LightingDetector"]
stream = ExtResource("14_6iqdt")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("15_nwmrb")
volume_db = 10.0
autoplay = true

[connection signal="player_entered_elevator" from="OfficeFloor/LeftDoor" to="." method="_on_right_door_player_entered_elevator"]
[connection signal="player_entered_elevator" from="OfficeFloor/RightDoor" to="." method="_on_right_door_player_entered_elevator"]
[connection signal="body_entered" from="LightingDetector" to="LightingDetector" method="_on_body_entered"]
